Remove obsolete constructor