@@ -7,27 +7,24 @@ import static seedu.taassist.testutil.TypicalModuleClasses.CS1101S;
 import static seedu.taassist.testutil.TypicalModuleClasses.CS1231S;
 import static seedu.taassist.testutil.TypicalSessions.ASSIGNMENT_1;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import seedu.taassist.model.session.Session;
-import seedu.taassist.model.uniquelist.UniqueList;
 
 public class ModuleClassTest {
 
     @Test
     public void constructor_null_throwsNullPointerException() {
         String validModuleClassName = "CS1101S";
-        List<Session> validSessions = Arrays.asList(ASSIGNMENT_1);
+        List<Session> validSessions = List.of(ASSIGNMENT_1);
 
         // null name
         assertThrows(NullPointerException.class, () -> new ModuleClass(null));
 
         // null session
-        assertThrows(NullPointerException.class, () -> new ModuleClass(validModuleClassName,
-                (UniqueList<Session>) null));
+        assertThrows(NullPointerException.class, () -> new ModuleClass(validModuleClassName, null));
 
         // null name
         assertThrows(NullPointerException.class, () -> new ModuleClass(null, validSessions));
